<resources>
    <string name="app_name">Number System Convertor</string>
    <string name="octal">Octal Number</string>
    <string name="decimal">Decimal Number</string>
    <string name="binary">Binary Number</string>
    <string name="hexadecimal">HexaDecimal Number</string>
    <string name="binaryconvertor">Binary Convertor (Without Decimal)</string>
    <string name="octalconvertor">Octal Convertor (Without Decimal)</string>
    <string name="decimalconvertor">Decimal Convertor (Without Decimal)</string>
    <string name="hexadecimalconvertor">Hexa Decimal Convertor (Without Decimal)</string>
    <string name="enterbinary">Enter the Binary value : </string>
    <string name="enteroctal">Enter the Octal value : </string>
    <string name="enterdecimal">Enter the Decimal value : </string>
    <string name="enterhexadecimal">Enter the Hexa Decimal value : </string>
    <string name="convert">Convert</string>
    <string name="binarycolon">Binary : </string>
    <string name="octalcolon">Octal : </string>
    <string name="decimalcolon">Decimal : </string>
    <string name="hexadecimalcolon">Hexa Decimal : </string>
    <string name="ans">Ans : </string>
    <string name="binary1">Enter First Binary Value </string>
    <string name="binary2">Enter Second Binary Value</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="binaryaddition">Binary Addition</string>
    <string name="binarysubtraction">Binary Subtraction</string>
    <string name="octaladdition">Octal Addition</string>
    <string name="octalsubtraction">Octal Subtraction</string>
    <string name="decimaladdition">Decimal Addition</string>
    <string name="decimalsubtraction">Decimal Subtraction</string>
    <string name="hexadecimaladdition">Hexa Decimal Addition</string>
    <string name="hexadecimalsubtraction">Hexa Decimal Subtraction</string>
    <string name="onescomplement">1\'s Complement</string>
    <string name="twoscomplement">2\'s Complement</string>
    <string name="onescomplementcolon">1\'s Complement : </string>
    <string name="twoscomplementcolon">2\'s Complement : </string>
    <string name="binaryconvertorpoint">Binary Convertor (Decimal)</string>
    <string name="octalconvertorpoint">Octal Convertor (Decimal)</string>
    <string name="decimalconvertorpoint">Decimal Convertor (Decimal)</string>
    <string name="hexadecimalconvertorpoint">Hexa Decimal Convertor (Decimal)</string>
    <string name="sevenscomplement">7\'s Complement</string>
    <string name="eightscomplement">8\'s Complement</string>
    <string name="sevenscomplementcolon">7\'s Complement : </string>
    <string name="eightscomplementcolon">8\'s Complement : </string>
    <string name="ninescomplement">9\'s Complement</string>
    <string name="tenscomplement">10\'s Complement</string>
    <string name="ninescomplementcolon">9\'s Complement : </string>
    <string name="tenscomplementcolon">10\'s Complement : </string>
    <string name="fifteenscomplement">15\'s Complement</string>
    <string name="sixteenscomplement">16\'s Complement</string>
    <string name="fifteenscomplementcolon">15\'s Complement : </string>
    <string name="sixteencomplementcolon">16\'s Complement : </string>
    <string name="octal1">Enter First Octal Value </string>
    <string name="octal2">Enter Second Octal Value</string>
    <string name="decimal1">Enter First Decimal Value </string>
    <string name="decimal2">Enter Second Decimal Value</string>
    <string name="hexadecimal1">Enter First Hexa Decimal Value </string>
    <string name="hexadecimal2">Enter Second Hexa Decimal Value</string>
</resources>