<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OctalFiles.OctalNumberSystem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#EADDDD"
        android:backgroundTint="#EADDDD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/octalconvertor"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:layout_margin="10dp"
                android:text="@string/octalconvertor"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/octalconvertorpoint"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/octalconvertorpoint"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/octalAddition"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/octaladdition"
                android:background="@drawable/rounded_corner"
                android:layout_margin="10dp"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/octalsevens"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/sevenscomplement"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/octaleights"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/eightscomplement"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/octalSubtraction"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/octalsubtraction"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>