<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BinaryFiles.BinaryNumberSystem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#EADDDD"
        android:backgroundTint="#EADDDD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/binaryconvertor"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/binaryconvertor"
                android:background="@drawable/rounded_corner"
                android:layout_margin="10dp"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/binaryconvertorpoint"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/binaryconvertorpoint"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/binaryAddition"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/binaryaddition"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/binaryones"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/onescomplement"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/binarytwos"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:layout_margin="10dp"
                android:text="@string/twoscomplement"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/binarySubtraction"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="#0088F3"
                android:text="@string/binarysubtraction"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>