<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecimalFiles.DecimalNumberSystem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#EADDDD"
        android:backgroundTint="#EADDDD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/decimalconvertor"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:layout_margin="10dp"
                android:text="@string/decimalconvertor"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/decimalconvertorpoint"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/decimalconvertorpoint"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/decimalAddition"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/decimaladdition"
                android:background="@drawable/rounded_corner"
                android:layout_margin="10dp"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/decimalnines"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/ninescomplement"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/decimaltens"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/tenscomplement"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/decimalSubtraction"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#0088F3"
                android:text="@string/decimalsubtraction"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>