<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OctalFiles.OctalPointConvertor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:backgroundTint="#EADDDD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editOctalPointConvert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/enteroctal"
                android:inputType="numberDecimal"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/octalPointConvert"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#008FFF"
                android:text="@string/convert"
                android:background="@drawable/rounded_corner"
                android:textColor="#FFFFFF"
                android:textColorHint="#000000" />

            <TextView
                android:id="@+id/octal_binary_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/binarycolon"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/octal_decimal_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/decimalcolon"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/octal_hexadecimal_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/hexadecimalcolon"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>